--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   ],
   "author": "",
   "license": "ISC",
+  "type": "module",
   "dependencies": {
     "body-parser": "^1.20.3",
     "dotenv": "^16.4.7",
